Added Google OAuth

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,31 @@
 <resources>
     <string name="app_name">ML_App</string>
-    ​<string-array name="Colors">
-    ​<item name="color">Red</item>
-    ​<item name="color">Orange</item>
-    ​<item name="color">Yellow</item>
-    ​<item name="color">Green</item>
-    ​<item name="color">Blue</item>
-    ​<item name="color">White</item>
-    ​<item name="color">Black</item>
-    ​<item name="color">Purple</item>
-    ​<item name="color">Pink</item>
-    ​<item name="color">Gray</item>
-    ​<item name="color">Cyan Blue</item>
-    ​<item name="color">Magenta</item>
-    ​</string-array>
+    ​
+    <string-array name="Colors">
+        ​
+        <item name="color">Red</item>
+        ​
+        <item name="color">Orange</item>
+        ​
+        <item name="color">Yellow</item>
+        ​
+        <item name="color">Green</item>
+        ​
+        <item name="color">Blue</item>
+        ​
+        <item name="color">White</item>
+        ​
+        <item name="color">Black</item>
+        ​
+        <item name="color">Purple</item>
+        ​
+        <item name="color">Pink</item>
+        ​
+        <item name="color">Gray</item>
+        ​
+        <item name="color">Cyan Blue</item>
+        ​
+        <item name="color">Magenta</item>
+        ​
+    </string-array>
 </resources>
