--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ML_App</string>
+    <string name="app_name">UnKshipta</string>
     ​
     <string-array name="Colors">
         ​
